# cPlusPlusFriend

./: .gitignore  LICENSE.txt  Makefile  README.md  amPm24.rb  analyze_tweet_activity_bayesian.py  analyze_tweet_activity_bayesian.stan  asciiOnlyChecker.rb  asciiOnlyCheckerImpl.rb  asciiOnlyCheckerTest.rb  binToDigits.md  cFriends.c  cFriends.h  cFriendsCommon.h  cFriendsExt.c  cFriendsShiftJis.c  caseWhen.rb  collectAllCommits.rb  compound_interest.R  cppDosAndDonts.md  cppFriends.cpp  cppFriends.hpp  cppFriends17.cpp  cppFriends20.cpp  cppFriends98.cpp  cppFriendsBot.txt  cppFriendsBotCyclic.txt  cppFriendsBotHistory.txt  cppFriendsBot_en.txt  cppFriendsClang.cpp  cppFriendsClang.hpp  cppFriendsClangExt.cpp  cppFriendsClangMain.cpp  cppFriendsClangTest.cpp  cppFriendsError.cpp  cppFriendsExt.cpp  cppFriendsFile.rb  cppFriendsMain.cpp  cppFriendsNet.cpp  cppFriendsOpt.cpp  (+30 more)
add_copy/: Dockerfile  echo.sh
add_copy/first1/: 1st.txt
add_copy/first2/: 1st.txt
algorithm/: Dockerfile  README.md  difficulty.R  difficulty.md  difficulty.py  docker-compose.yml  transpose.py
algorithm/snipetts/: Makefile  sample.cpp
cmp_bool/: Makefile  cmp_bool.hpp  cmp_bool_ext.cpp  cmp_bool_main.cpp
connect4/: Makefile  connect4.cpp
count_patterns/: Makefile  count_patterns.cpp
cpp_optimize/: Makefile  cpp_optimize.cpp
decl_type/: Makefile  decl_type.cpp
element_chain/: Makefile  element_chain.cpp
fib_const/: Makefile  fib_const.R  fib_const.cpp  fib_const.md
four_operands/: Makefile  four_operands.cpp
huge_number/: Makefile  ackermann_function.cpp
living_time_survey/: README.md  global.R  living_time_survey.R  main.R  occupation.R  server.R  ui.R
living_time_survey/dashboard/: global.R  server.R  ui.R
nbinomPlot/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
nbinomPlot/R/: app.R  mainPanel.R  muVar.R  nbinom.R  negativeBinomial.R  parameter.R  probVar.R  quantileVar.R  resetButton.R  sizeVar.R  updateMuButton.R
nbinomPlot/launcher/: app.R
nbinomPlot/man/: negativeBinomialApp.Rd
nbinomPlot/tests/: testthat.R
nop/: Makefile  nop.asm  nop.s
optimal_action/: Makefile  optimal_action.R  optimal_action.cpp  optimal_action.py
pkg_install/: Dockerfile  docker-compose.yml  start.sh
popcount/: Makefile  popcount_asm.s  popcount_cpp.cpp
popcountr/: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  popcountr.Rproj
popcountr/R/: popcountr.R
popcountr/man/: popcountr.Rd  popcountr_.Rd
popcountr/src/: Makevars.win  popcountr.cpp
popcountr/tests/: testthat.R
rcpp20popcount/: .gitignore  DESCRIPTION  Dockerfile  LICENSE  LICENSE.md  NAMESPACE  README.md
rcpp20popcount/R/: popcount.R
rcpp20popcount/man/: popcount.Rd
rcpp20popcount/src/: code.cpp
rcpp20popcount/tests/: CMakeLists.txt  CMakeLists.txt.in  code.h  test_code.cpp  testthat.R
rcpp20popcount/tests/testthat/: test-popcount.R
rcpp20popcount/vignettes/: rcpp20popcount.Rmd
read_csv/: Makefile  crlf.csv  crlfnums.csv  lf.csv  read_csv_sample.cpp
reduce_colors/: reduce_image_colors.R
river/: Makefile  river.cpp
scripts/: Makefile
scripts/add_alpha/: add_alpha.py
scripts/ambiguous/: Makefile  ambiguous.cpp
scripts/analyze_tweet_activity/: analyze_tweet_activity.R  analyze_tweet_activity_ar.R  analyze_tweet_activity_bayesian.R  analyze_tweet_activity_bayesian.bat  analyze_tweet_activity_bayesian.py  analyze_tweet_activity_bayesian.stan  analyze_tweet_activity_bayesian2.R  analyze_tweet_activity_bayesian2.stan  analyze_tweet_activity_bayesian_jags.R  analyze_tweet_activity_bayesian_jags.txt  analyze_tweet_activity_range.py  analyze_tweet_activity_wday.R  convert_hashtags.py
scripts/axes_compile_time/: Makefile  axes_compile_time.R  axes_compile_time.cpp  axes_compile_time.py
scripts/comment_extractor/: comment_extractor.py
scripts/convert_opcode/: convert_opcode.c  convert_opcode.rb
scripts/data/: expected.txt  input.txt
scripts/dummy/: make_dummies.Rmd  with_na.csv
scripts/execstr/: Makefile  execstr.c  intext.txt
scripts/grass/: grass.py  grass_short.py
scripts/h5_sample/: binary_stream.R  binary_stream.py  create_rect_image.py
scripts/interest/: compound_interest.R  interest_rate_rule_of_72.R  simple_compound_interest.R
scripts/juliaset/: Dockerfile  juliaset.R  testcase.R
scripts/juliaset/cpp/: .clang-format  CMakeLists.txt  CMakeLists.txt.in  CMakeLists2.txt.in  bench_juliaset.cpp  build.sh  juliaset.cpp  juliaset.h  juliaset_impl.cpp  test_juliaset.cpp
scripts/juliaset/cpp/patch/: Doxyfile.diff
scripts/juliaset/rust/juliaset/: Cargo.toml  build.sh
scripts/juliaset/rust/juliaset/benches/: benchmark.rs
scripts/juliaset/rust/juliaset/src/: alt.rs  lib.rs  main.rs
scripts/juliaset/rust/juliaset/tests/: cli_test.rs
scripts/learning_R/: learning_R.Rmd  learning_R_population_tocsv.R
scripts/lifetime/: Makefile  lifetime.cpp  lifetime.rb
scripts/lint/: original.R  style.R
scripts/merge_density/: Makefile  merge_density.R  merge_density.cpp
scripts/recursion/: Makefile  recursion.cpp
scripts/rtips/: Dockerfile_rtips  r_tips.Rmd
scripts/secretary_problem/: secretary_problem.py
scripts/sort_r/: Makefile  sort_chars.R  sort_fast.R  sort_fast.cpp  sort_no_stack_overflow.R  sort_no_stack_overflow.cpp  sort_numbers.R  sort_stack_overflow.R
scripts/stan_example/: Dockerfile  mixture_norm.stan  stan_example.Rmd
scripts/stock_price/: Makefile  Makefile_memprof  analyze_exchange_rate.R  analyze_gde.R  analyze_gde.stan  analyze_gde_kfas.R  analyze_gde_stan.R  analyze_stock_prices.R  arrange_plots.R  as_seconds.R  barnsley_fern.R  barnsley_fern_cairo.R  benzene_ring.R  bits.R  break.R  break.cpp  calendar_2020.R  calendar_heatmap.R  (+104 more)
suminv/: Makefile  README.md  suminv.R  suminv.cpp  suminv_asm.s
template_params/: Makefile  template_params.cpp
thread_by_ref/: Makefile  thread_by_ref.cpp
thread_safety/: Dockerfile  Makefile  check.sh  docker-compose.yml  std_execution.cpp  thread_safety.cpp
tsc/: Makefile  tsc.cpp  tsc_linux.asm  tsc_win.asm
vtable/: Makefile  vtable.cpp  vtable.hpp  vtable_def.cpp
warnings/: Makefile  warnings.cpp
(+25 files in other folders)
