[package]
name = "juliaset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1.1.3"
colorous = "1.0.6"
csv = "1.1.6"
image = "0.24.2"
ndarray = "0.15.4"
ndarray-csv = "0.5.1"
num = "0.4.0"
