[package]
name = "juliaset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.4"
assert_float_eq = "1.1.3"
colorous = "1.0.6"
criterion = "0.3.6"
crossbeam = "0.8.1"
csv = "1.1.6"
getopts = "0.2.21"
image = "0.24.2"
ndarray = "0.15.4"
ndarray-csv = "0.5.1"
num = "0.4.0"
num_cpus = "1.13.1"
predicates = "2.1.1"
tempfile = "3.3.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[[bench]]
name = "benchmark"
harness = false
